fixed search box alignment

--- a/css/header.css
+++ b/css/header.css
@@ -447,10 +447,9 @@ header .product-nav li a.active{
   nav .site-icon-container{
     margin-right: 0;
   }
-  nav .site-icon-wrapper.search{
-    top: 50px;
-    right: -10px;
-    width: 94vw;
+  nav .site-icon-wrapper.search.open{
+    right: 10px;
+    width: 80vw;
   }
   nav .main-nav{
     display: none;
